# FuckACE

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.ts  styles.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mainfest.xml  process.rs  registry.rs
src/hooks/: useOptimizedSupabase.ts
src/utils/: storage.ts
