[package]
name = "FuckACE"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[package.metadata.windows.manifest]
path = "src/mainfest.xml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fuck_ace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "winnt", "sysinfoapi"] }
tokio = { version = "1", features = ["full"] }

