[package]
name = "pitayabox"
version = "0.5.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 核心依赖：不开启 tray-icon 特性
tauri = { version = "2", features = [] } 
tauri-plugin-opener = "2"
# 必须加上这两个插件，否则 ACL 权限检查会崩溃
tauri-plugin-shell = "2"   
tauri-plugin-process = "2" 

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
winreg = "0.52"
tokio = { version = "1", features = ["full"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Power",
    "Win32_System_Registry"
]
